--- a/react-clicky-game/src/components/card/card.css
+++ b/react-clicky-game/src/components/card/card.css
@@ -5,7 +5,6 @@
     margin: 1rem;
     position: relative;
     width: 325px;
-    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
     text-align: left;
   }
   
@@ -13,7 +12,7 @@
     height: 100%;
     overflow: hidden;
     text-align: center;
-    background:#6CADDC;
+    background:grey;
   }
   .card > .img-container > img {
     width: 60%
